Added RSS 0.92 feed.

--- a/Rules
+++ b/Rules
@@ -27,6 +27,10 @@ end
 compile '*' do
 end
 
+route '/feeds/rss_092.xml.erb' do
+  "/feeds/rss/"
+end
+
 route '/feeds/*' do
   "/feeds/" + item.name + ".xml"
 end
