Posts now layout with proper site style.

--- a/Rules
+++ b/Rules
@@ -11,7 +11,7 @@ end
 compile '/posts/*' do
   rep.filter :erb
   rep.filter :rdiscount
-  rep.layout 'default'
+  rep.layout 'post'
 end
 
 compile '/feeds/*' do
