--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteRule ^index.php/feed/ /feeds/rss_2_0.xml [R]
 RewriteRule ^index.php/feed/rss/ /feeds/rss_0_9_2.xml [R]
 RewriteRule ^index.php/feed/atom/ /feeds/atom.xml [R]
 RewriteRule ^index.php/(.*) /posts/$1 [R]
+
+ErrorDocument 404 /missing.html
