--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-  include /opt/local/etc/nginx/mime.types;
+  include mime.types;
   access_log            logs/nginx.access.log;
   client_body_temp_path logs/nginx.client_body_temp;
   fastcgi_temp_path     logs/nginx.client_body_temp;
